tests/fixtures/errors/stdlib/core.puml
Alice -> Bob: errors stdlib core
